--- a/styles.css
+++ b/styles.css
@@ -33,3 +33,15 @@ h1 {
     justify-content: center;
     margin: 50px;
 }
+
+
+
+input, button {
+    box-sizing: border-box;
+    margin: 10px;
+    font-family: 'Nunito', sans-serif;
+    height: 40px;
+    width: 200px;
+    text-align: center;
+    border-radius: 10px;
+}
